# f1-pitwall

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml  generate-data.yml
apps/web/: next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/latest-replay/: route.ts
apps/web/app/api/next-race/: route.ts
apps/web/app/api/predictions/next/: route.ts
apps/web/app/api/season-index/: route.ts
apps/web/app/widget-demo/: page.tsx
apps/web/components/: Dashboard.tsx  NextRacePanel.tsx  PredictionsPanel.tsx  RaceSelector.tsx  SiteFooter.tsx  SiteHeader.tsx
apps/web/lib/: apiResponse.ts  data.ts
apps/web/scripts/: copy-data.mjs
docs/: architecture.md  data-contract.md  lesson.md
docs/screenshots/: README.md
notebooks/: podium_predictions.ipynb
public-data/: latest-replay.json  next-race.json  season-index.json
public-data/races/: belgian-grand-prix.json  british-grand-prix.json  sample-grand-prix.json
python/f1pitwall/: __init__.py  __main__.py  cli.py  config.py  models.py  util.py
python/f1pitwall/data_sources/: __init__.py  fastf1_source.py
python/f1pitwall/exporters/: __init__.py  json_exporter.py
python/f1pitwall/predictions/: __init__.py  data.py  export.py  pipeline.py
python/f1pitwall/replay/: __init__.py  frames.py  synthetic.py
python/tests/: test_exporter.py  test_frames.py  test_predictions.py  test_synthetic.py
